--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "node-fetch": ">=2.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0"
